# NeuroRubik

./: README.md
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: main.ts
frontend/src/cube/: CubeState.ts
frontend/src/neural/: NeuralSolver.ts  Solver.ts
frontend/src/styles/: main.css
frontend/src/visualization/: CubeRenderer.ts  SceneManager.ts
python/: .gitignore  README.md  activate.ps1  pyproject.toml  train.ipynb  train.py
python/cube/: __init__.py  cube_env.py  cube_state.py
python/genetic/: __init__.py  evolution.py  fitness.py  individual.py
python/neural/: __init__.py  network.py  weight_export.py
